--- a/recipes/cal.html
+++ b/recipes/cal.html
@@ -41,15 +41,14 @@
 
         /* Desert Earth Tones for buttons */
         button[data-pentadecimal="0"] { background-color: #e8dfcb; } /* Lightest */
-        button[data-pentadecimal="p"], button[data-pentadecimal="q"] { background-color: #e0d5bf; }
-        button[data-pentadecimal="b"], button[data-pentadecimal="d"] { background-color: #d8cbb3; }
-        button[data-pentadecimal="n"], button[data-pentadecimal="u"] { background-color: #d0c1a7; }
-        button[data-pentadecimal="m"], button[data-pentadecimal="w"] { background-color: #c8b79b; }
-        button[data-pentadecimal="5"], button[data-pentadecimal="2"] { background-color: #c0ad8f; }
-        button[data-pentadecimal="6"], button[data-pentadecimal="9"] { background-color: #b8a383; }
-        button[data-pentadecimal="7"], button[data-pentadecimal="L"] { background-color: #b09977; }
-        button[data-pentadecimal="7"], button[data-pentadecimal="L"] { background-color: #b09977; }
-
+        button[data-pentadecimal="p"], button[data-pentadecimal="q"] { background-color: #e3c4a8; }
+        button[data-pentadecimal="b"], button[data-pentadecimal="d"] { background-color: #d2b48c; }
+        button[data-pentadecimal="n"], button[data-pentadecimal="u"] { background-color: #b08e75; }
+        button[data-pentadecimal="m"], button[data-pentadecimal="w"] { background-color: #a07c60; }
+        button[data-pentadecimal="5"], button[data-pentadecimal="2"] { background-color: #8f6a4d; }
+        button[data-pentadecimal="6"], button[data-pentadecimal="9"] { background-color: #7e583a; }
+        button[data-pentadecimal="7"], button[data-pentadecimal="L"] { background-color: #6d4627; }
+        
         /* Function keys */
         button[onclick="appendToInput('+')"], button[onclick="appendToInput('×')"], button[onclick="appendToInput('/')"], 
         button[onclick="calculate()"], button[onclick="clearInput()"] { background-color: #b22222; }
