--- a/recipes/cal.html
+++ b/recipes/cal.html
@@ -8,7 +8,7 @@
     <style>
         body, button, input, footer {
             font-family: 'Kurale', serif;
-            background-color: #edc9af; /* Light sand color */
+            background-color: #AFD3ED; /* Light blue*/
             color: #db4437; /* Dark brown text */
             text-align: center;
             margin: 0;
