--- a/recipes/cal.html
+++ b/recipes/cal.html
@@ -37,6 +37,7 @@
             border: 2px solid #8c7b6d;
             background-color: #d3c0a6; /* Light brown */
             color: #5a4634; /* Dark brown text */
+            font-weight: bold;
         }
 
         /* Desert Earth Tones for buttons */
@@ -100,7 +101,7 @@
 <button data-pentadecimal="d" onclick="appendToInput('d')">d</button>
 
         <button data-pentadecimal="b" onclick="appendToInput('b')">b</button>
-<button data-pentaecimal="n" onclick="appendToInput('n')">n</button>
+<button data-pentadecimal="n" onclick="appendToInput('n')">n</button>
         
 
         <br>
@@ -110,7 +111,7 @@
         <button data-pentadecimal="m" onclick="appendToInput('m')">m</button>
 
  
-        <button data-pengadecimal="5" onclick="appendToInput('5')">5</button>
+        <button data-pentadecimal="5" onclick="appendToInput('5')">5</button>
          <br>
         <button onclick="appendToInput('+')">+</button>
         <button onclick="appendToInput('×')">×</button>
