--- a/recipes/cal.html
+++ b/recipes/cal.html
@@ -52,7 +52,7 @@
              } 
         
         /* Function keys */
-        button[onclick="appendToInput('+')"], button[onclick="appendToInput('×')"], button[onclick="appendToInput('/')"], 
+        button[onclick="appendToInput('+')"], button[onclick="appendToInput('×')"], button[onclick="appendToInput('/')"]{ background-color: #5C4033; color: #edc9af}
         button[onclick="calculate()"], button[onclick="clearInput()"] { background-color: #b22222; color: #edc9af}
 
         input {
