--- a/recipes/cal.html
+++ b/recipes/cal.html
@@ -8,7 +8,7 @@
     <style>
         body, button, input, footer {
             font-family: 'Kurale', serif;
-            background-color: #B2AD7F; /* sage*/
+            background-color: #e3c4a8; /* sage*/
             color: #db4437; /* Dark brown text */
             text-align: center;
             margin: 0;
@@ -41,7 +41,7 @@
         }
 
         /* Desert Earth Tones for buttons */
-        button[data-pentadecimal="0"] { background-color: #e8dfcb; } /* Lightest */
+        button[data-pentadecimal="0"] { background-color: #e3c4a8; } /* Lightest */
         button[data-pentadecimal="p"], button[data-pentadecimal="q"] { background-color: #e3c4a8; }
         button[data-pentadecimal="b"], button[data-pentadecimal="d"] { background-color: #d2b48c; }
         button[data-pentadecimal="n"], button[data-pentadecimal="u"] { background-color: #b08e75; }
@@ -79,7 +79,7 @@
 
 <body>
     <div class="calculator">
-        <h2>Balanced Pentadecimal Calculator</h2>        <input type="text" id="inputField" placeholder="Enter calculation">
+        <h2>B.P.C.</h2>        <input type="text" id="inputField" placeholder="Enter calculation">
         <button onclick="clearInput()">C</button>
         <br>
         <button data-pentadecimal="L" onclick="appendToInput('L')"style="font-style: italic;">L</button>
@@ -123,7 +123,7 @@
         <input type="text" id="outputField" readonly>
         <br>
         <footer>
-            Version: 0.0m
+            Balanced Pentadecimal Calculator Version: 0.0m by B.S.G.
         </footer>
     </div>
 
