--- a/recipes/cal.html
+++ b/recipes/cal.html
@@ -47,8 +47,8 @@
         button[data-pentadecimal="n"], button[data-pentadecimal="u"] { background-color: #b08e75; }
         button[data-pentadecimal="m"], button[data-pentadecimal="w"] { background-color: #a07c60; color: #edc9af}
         button[data-pentadecimal="5"], button[data-pentadecimal="2"] { background-color: #8f6a4d; color: #edc9af }
-        button[data-pentadecimal="6"], button[data-pentadecimal="9"] { background-color: #b08e75; color: #edc9af; }
-        button[data-pentadecimal="7"], button[data-pentadecimal="L"] { background-color: #8f6a4d; color: #edc9af; /* Dark brown text */
+        button[data-pentadecimal="6"], button[data-pentadecimal="9"] { background-color: #8f6a4d; color: #edc9af; }
+        button[data-pentadecimal="7"], button[data-pentadecimal="L"] { background-color: #5C4033; color: #edc9af; /* Dark brown text */
              } 
         
         /* Function keys */
