--- a/recipes/cal.html
+++ b/recipes/cal.html
@@ -123,7 +123,8 @@
         <input type="text" id="outputField" readonly>
         <br>
         <footer>
-            Balanced Pentadecimal Calculator Version: 0.0m by B.S.G.
+            Balanced Pentadecimal Calculator - Version: 0.0m
+            <br>as imagined by B.S.G.
         </footer>
     </div>
 
