--- a/recipes/cal.html
+++ b/recipes/cal.html
@@ -43,8 +43,8 @@
         /* Desert Earth Tones for buttons */
         button[data-pentadecimal="0"] { background-color: #e3c4a8; } /* Lightest */
         button[data-pentadecimal="p"], button[data-pentadecimal="q"] { background-color: #d2b48c; }
-        button[data-pentadecimal="b"], button[data-pentadecimal="d"] { background-color: #d2b48c; }
-        button[data-pentadecimal="n"], button[data-pentadecimal="u"] { background-color: #b08e75; }
+        button[data-pentadecimal="b"], button[data-pentadecimal="d"] { background-color: #b08e75; }
+        button[data-pentadecimal="n"], button[data-pentadecimal="u"] { background-color: #a07c60; color: #edc9af}
         button[data-pentadecimal="m"], button[data-pentadecimal="w"] { background-color: #a07c60; color: #edc9af}
         button[data-pentadecimal="5"], button[data-pentadecimal="2"] { background-color: #8f6a4d; color: #edc9af }
         button[data-pentadecimal="6"], button[data-pentadecimal="9"] { background-color: #8f6a4d; color: #edc9af; }
