--- a/recipes/cal.html
+++ b/recipes/cal.html
@@ -41,19 +41,19 @@
         }
 
         /* Desert Earth Tones for buttons */
-        button[data-pentadecimal="0"] { background-color: #e3c4a8; } /* Lightest */
+        button[data-pentadecimal="0"] { background-color: #e3c4a8; border: 2px solid #5C4033;} /* Lightest */
         button[data-pentadecimal="p"], button[data-pentadecimal="q"] { background-color: #d2b48c; }
         button[data-pentadecimal="b"], button[data-pentadecimal="d"] { background-color: #b08e75; }
-        button[data-pentadecimal="n"], button[data-pentadecimal="u"] { background-color: #a07c60; color: #edc9af}
-        button[data-pentadecimal="m"], button[data-pentadecimal="w"] { background-color: #a07c60; color: #edc9af}
-        button[data-pentadecimal="5"], button[data-pentadecimal="2"] { background-color: #8f6a4d; color: #edc9af }
-        button[data-pentadecimal="6"], button[data-pentadecimal="9"] { background-color: #8f6a4d; color: #edc9af; }
-        button[data-pentadecimal="7"], button[data-pentadecimal="L"] { background-color: #5C4033; color: #edc9af; /* Dark brown text */
+        button[data-pentadecimal="n"], button[data-pentadecimal="u"] { background-color: #a07c60; color: #f4e9d8; border: 2px solid #5C4033;}
+        button[data-pentadecimal="m"], button[data-pentadecimal="w"] { background-color: #a07c60; color: #f4e9d8; border: 2px solid #5C4033;}
+        button[data-pentadecimal="5"], button[data-pentadecimal="2"] { background-color: #8f6a4d; color: #f4e9d8;  border: 2px solid #5C4033;}
+        button[data-pentadecimal="6"], button[data-pentadecimal="9"] { background-color: #8f6a4d; color: #f4e9d8;  border: 2px solid #5C4033;}
+        button[data-pentadecimal="7"], button[data-pentadecimal="L"] { background-color: #5C4033; color: #f4e9d8; /* Dark brown text */
              } 
         
         /* Function keys */
         button[onclick="appendToInput('+')"], button[onclick="appendToInput('×')"], button[onclick="appendToInput('/')"]{ background-color: #5C4033; color: #edc9af}
-        button[onclick="calculate()"], button[onclick="clearInput()"] { background-color: #b22222; color: #edc9af}
+        button[onclick="calculate()"], button[onclick="clearInput()"] { background-color: #b22222; color: #edc9af; border: 2px solid #5C4033;}
 
         input {
             width: 200px;
