--- a/recipes/cal.html
+++ b/recipes/cal.html
@@ -36,15 +36,15 @@
             transition: background-color 0.3s;
             border: 2px solid #8c7b6d;
             background-color: #d3c0a6; /* Light brown */
-            color: #5a4634; /* Dark brown text */
+            color: #5C4033; /* Dark brown text */
             font-weight: bold;
         }
 
         /* Desert Earth Tones for buttons */
         button[data-pentadecimal="0"] { background-color: #e3c4a8; border: 2px solid #5C4033;} /* Lightest */
         button[data-pentadecimal="p"], button[data-pentadecimal="q"] { background-color: #d2b48c; }
-        button[data-pentadecimal="b"], button[data-pentadecimal="d"] { background-color: #b08e75; }
-        button[data-pentadecimal="n"], button[data-pentadecimal="u"] { background-color: #a07c60; color: #f4e9d8; border: 2px solid #5C4033;}
+        button[data-pentadecimal="b"], button[data-pentadecimal="d"] { background-color: #b08e75; color: #f4e9d8;}
+        button[data-pentadecimal="n"], button[data-pentadecimal="u"] { background-color: #a07c60; color: #f4e9d8;}
         button[data-pentadecimal="m"], button[data-pentadecimal="w"] { background-color: #a07c60; color: #f4e9d8; border: 2px solid #5C4033;}
         button[data-pentadecimal="5"], button[data-pentadecimal="2"] { background-color: #8f6a4d; color: #f4e9d8;  border: 2px solid #5C4033;}
         button[data-pentadecimal="6"], button[data-pentadecimal="9"] { background-color: #8f6a4d; color: #f4e9d8;  border: 2px solid #5C4033;}
