--- a/recipes/cal.html
+++ b/recipes/cal.html
@@ -66,7 +66,7 @@
 
         footer {
             margin-top: 20px;
-            font-size: 0.8em;
+            font-size: 0.6em;
         }
         h2 {
             font-family: Arial, sans-serif;
@@ -125,7 +125,7 @@
         <footer>
             <h5>Balanced Pentadecimal Calculator
 <br>
-                <h6>- Version: 0.0m
+                <h6>- Version: 0.p5
 <br>
             <br>
                 as imagined by B.S.G. </h6>
@@ -134,7 +134,7 @@
 
     <script>
         // Define the symbols and their corresponding values for balanced pentadecimal
-        const pentadecimalSymbols = ['L', '9', '2', 'w', 'u', 'd', 'q', '0', 'p', 'b', 'n', 'm', '5', '6', '7'];
+        const pentadecimalSymbols = ['L', '9', '2', 'w', 'd', 'u', 'q', '0', 'p', 'n', 'b', 'm', '5', '6', '7'];
         const pentadecimalValues = {
             'L': -7, '9': -6, '2': -5, 'w': -4, 'd': -3, 'u': -2, 'q': -1,
             '0': 0,
